Created new ETTokenRequestException for access token request failures.